# ITKVTK_demo

./: .gitmodules  CMakeLists.txt  DEFINE_PATH.h  ITKVTK_demo.code-workspace  TestReadImageDirection.h  TestWriteVTKImageData.h  TestvtkImageConnectivityFilter.h  main.cpp
cmake/: spdlog_fetch.cmake  spdlog_manual.cmake
data/: SUPAWAT20240211MR_AXT2THIN.nrrd
src/: ImageCoordinate.h  Point.h
